--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<link rel="stylesheet" href="test2.css"> 
+
 <body>
 
 <h1>This is a test for deployment</h1>
@@ -7,6 +9,8 @@
 
     <h2>It works!!</h2>
 </p>
+
+
 </body>
 
 </html>
