--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 
+<head>
 <link rel="stylesheet" href="test2.css"> 
+</head>
+
 
 <body>
+<div class="blue">
 
 <h1>This is a test for deployment</h1>
 <p>
@@ -10,6 +14,22 @@
     <h2>It works!!</h2>
 </p>
 
+</div >
+    
+<div>
+
+</div>
+
+<div class="yellow">
+
+<h2>
+
+    This is a test
+</h2>
+
+<p> <h1>This is a another test</h1></p>
+
+</div>
 
 </body>
 
