--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 <p> <h1>This is a another test</h1></p>
 
 </div>
-
+        <script>
+            alert("This is a warning");
+        </script>
 </body>
+
 
 </html>
